task-1.2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world

  template:
    metadata:
      labels:
        app: hello-world

    spec:
      containers:
      - name: hello-world
        image: crccheck/hello-world
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app: hello-world
spec:
  selector: 
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
