task-1.2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  ingressClassName: nginx
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
